fix: fix cors/security configuration
Signed-off-by: thibault <thibault.Garrigues@icloud.Com>